package library.userexception;

public class BookException extends Exception {
	
	 public BookException(String message) 
	    { 
	        super(message); 
	    } 

}
